<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/txtWcBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_to_your_account"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txtWcBack"
        app:layout_constraintStart_toStartOf="@+id/txtWcBack"
        app:layout_constraintTop_toBottomOf="@+id/txtWcBack" />


    <EditText
        android:id="@+id/etPhoneNumber"
        style="@style/EditTextOutlinedGreen"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_call"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:text="@string/login"
        style="@style/btnFilledGreen"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txtOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/txtOr"
        app:layout_constraintEnd_toStartOf="@+id/txtOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtOr"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/txtOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtOr"
        app:layout_constraintTop_toTopOf="@+id/txtOr"
        app:layout_constraintWidth_percent="0.35" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogle"
        android:layout_marginBottom="16dp"
        style="@style/btnFilledGreen"
        android:background="@drawable/bg_btn_white"
        android:drawableStart="@drawable/ic_google"
        android:text="@string/continue_with_google"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDoNotHaveAcc"
        app:layout_constraintEnd_toEndOf="@+id/txtRegister"
        app:layout_constraintStart_toStartOf="@+id/txtDoNotHaveAcc" />


    <TextView
        android:id="@+id/txtDoNotHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/don_t_have_account"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtGoBack" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtDoNotHaveAcc"
        app:layout_constraintStart_toEndOf="@+id/txtDoNotHaveAcc" />

    <TextView
        android:id="@+id/txtGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/go_back"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>