<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCreateAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/create_your_account"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/txtRegister"
                app:layout_constraintStart_toStartOf="@+id/txtRegister"
                app:layout_constraintTop_toBottomOf="@+id/txtRegister" />

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_grey_circle"
                android:src="@drawable/ic_profile_grey"
                app:layout_constraintEnd_toEndOf="@+id/txtCreateAcc"
                app:layout_constraintStart_toStartOf="@+id/txtCreateAcc"
                app:layout_constraintTop_toBottomOf="@+id/txtCreateAcc" />

            <TextView
                android:id="@+id/txtUploadProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/upload_profile_photo"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imgProfile"
                app:layout_constraintStart_toStartOf="@+id/imgProfile"
                app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

            <EditText
                android:id="@+id/etFullName"
                style="@style/EditTextOutlinedGreen"
                android:drawableStart="@drawable/ic_profile_circle"
                android:hint="@string/full_name"
                app:layout_constraintEnd_toEndOf="@+id/txtUploadProfile"
                app:layout_constraintStart_toStartOf="@+id/txtUploadProfile"
                app:layout_constraintTop_toBottomOf="@+id/txtUploadProfile" />

            <EditText
                android:id="@+id/etEmailAddress"
                style="@style/EditTextOutlinedGreen"
                android:drawableStart="@drawable/ic_alternate_email"
                android:hint="@string/email_address"
                app:layout_constraintEnd_toEndOf="@+id/etFullName"
                app:layout_constraintStart_toStartOf="@+id/etFullName"
                app:layout_constraintTop_toBottomOf="@+id/etFullName" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/EditTextOutlinedGreen"
                android:drawableStart="@drawable/ic_call"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="@+id/etEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/etEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />

            <EditText
                android:id="@+id/etBio"
                style="@style/EditTextOutlinedGreen"
                android:background="@drawable/bg_btn_green_border_rectangle"
                android:gravity="top|start"
                android:hint="@string/enter_bio"
                android:inputType="textMultiLine"
                android:minLines="4"
                app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
                app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />


            <EditText
                android:id="@+id/etCity"
                style="@style/EditTextOutlinedGreen"
                android:drawableStart="@drawable/ic_city"
                android:hint="@string/city"
                app:layout_constraintEnd_toEndOf="@+id/etBio"
                app:layout_constraintStart_toStartOf="@+id/etBio"
                app:layout_constraintTop_toBottomOf="@+id/etBio" />

            <LinearLayout
                android:id="@+id/layoutChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/etCity"
                app:layout_constraintStart_toStartOf="@+id/etCity"
                app:layout_constraintTop_toBottomOf="@+id/etCity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/who_am_i"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupUserType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_btn_grey_rec_two_corner"
                            android:padding="10dp"
                            android:text="@string/who_am_i"
                            android:textColor="@color/black"
                            android:elevation="8dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:drawableEndCompat="@drawable/ic_arrow_drop_down" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cricket_player"
                            android:textColor="@color/black" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pickle_ball_player"
                            android:textColor="@color/black" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/football_player"
                            android:textColor="@color/black" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/badminton_player"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                style="@style/btnFilledGreen"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="@+id/layoutChipGroup"
                app:layout_constraintStart_toStartOf="@+id/layoutChipGroup"
                app:layout_constraintTop_toBottomOf="@+id/layoutChipGroup" />

            <TextView
                android:id="@+id/txtAlreadyHaveAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutChipGroup" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/green"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/txtAlreadyHaveAcc"
                app:layout_constraintStart_toEndOf="@+id/txtAlreadyHaveAcc" />

            <TextView
                android:id="@+id/txtGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/go_back"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAlreadyHaveAcc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
