<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    tools:context=".ui.login.VerifyOtpActivity">

    <TextView
        android:id="@+id/txtVerifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/verify_account"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEnterOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_enter_the_otp"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txtVerifyOtp"
        app:layout_constraintStart_toStartOf="@+id/txtVerifyOtp"
        app:layout_constraintTop_toBottomOf="@+id/txtVerifyOtp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterOtp">

        <EditText
            android:id="@+id/otpEditText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/selector_edittext"
            android:gravity="center"
            android:hint="-"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="1"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="8dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/otpEditText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/selector_edittext"
            android:gravity="center"
            android:hint="-"
            android:inputType="number"
            android:maxLength="1"
            android:minWidth="50dp"
            android:textColor="@color/black"
            android:minHeight="50dp"
            android:padding="8dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/otpEditText1"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/otpEditText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/selector_edittext"
            android:gravity="center"
            android:hint="-"
            android:inputType="number"
            android:textColor="@color/black"
            android:maxLength="1"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="8dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/otpEditText2"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/otpEditText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/selector_edittext"
            android:gravity="center"
            android:hint="-"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="1"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="8dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/otpEditText3"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/otpEditText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/selector_edittext"
            android:gravity="center"
            android:hint="-"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="1"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="8dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/otpEditText4"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutResendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutOTP"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutOTP"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutOTP">

        <TextView
            android:id="@+id/txtDidNotReceiveCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/did_not_receive_code"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/resend_code"
            android:textColor="@color/green"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutResendOtpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/layoutResendOtp"
        app:layout_constraintStart_toStartOf="@+id/layoutResendOtp"
        app:layout_constraintTop_toBottomOf="@+id/layoutResendOtp">

        <TextView
            android:id="@+id/txtResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code_in"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtResendTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_00_20"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/btnFilledGreen"
        android:layout_margin="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/txtGoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/txtGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/go_back"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>